src/test/ui/issues/issue-52213.stderr
error[E0495]: cannot infer an appropriate lifetime due to conflicting requirements
  --> $DIR/issue-52213.rs:2:11
   |
LL |     match (&t,) {
   |           ^^^^^
   |
note: first, the lifetime cannot outlive the lifetime 'a as defined on the function body at 1:23...
  --> $DIR/issue-52213.rs:1:23
   |
LL | fn transmute_lifetime<'a, 'b, T>(t: &'a (T,)) -> &'b T {
   |                       ^^
   = note: ...so that the types are compatible:
           expected (&&(T,),)
              found (&&'a (T,),)
note: but, the lifetime must be valid for the lifetime 'b as defined on the function body at 1:27...
  --> $DIR/issue-52213.rs:1:27
   |
LL | fn transmute_lifetime<'a, 'b, T>(t: &'a (T,)) -> &'b T {
   |                           ^^
note: ...so that reference does not outlive borrowed content
  --> $DIR/issue-52213.rs:3:20
   |
LL |         ((u,),) => u,
   |                    ^

error: aborting due to previous error

